--- a/Forecasting_Chronos.ipynb
+++ b/Forecasting_Chronos.ipynb
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install git+https://github.com/amazon-science/chronos-forecasting.git"
+    "# %pip install git+https://github.com/amazon-science/chronos-forecasting.git"
    ]
   },
   {
