--- a/Forecasting_Chronos.ipynb
+++ b/Forecasting_Chronos.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "### Zero-Shot Results:\n",
     "\n",
-    "The following figure showcases the remarkable zero-shot performance of Chronos models on 27 datasets against local models, task-specific models and other pretrained models. For details on the evaluation setup and other results, please refer to the paper."
+    "The following figures showcases the remarkable zero-shot performance of Chronos models on 27 datasets against local models, task-specific models and other pretrained models. For details on the evaluation setup and other results, please refer to the paper."
    ]
   },
   {
