--- a/Forecasting_Chronos.ipynb
+++ b/Forecasting_Chronos.ipynb
@@ -62,7 +62,7 @@
     "id": "8VYIEkHwQIEG"
    },
    "source": [
-    "Figure: High-level depiction of Chronos. (Left) The input time series is scaled and quantized to obtain a sequence of tokens. (Center) The tokens are fed into a language model which may either be an encoder-decoder or a decoder-only model. The model is trained using the cross-entropy loss. (Right) During inference, we autoregressively sample tokens from the model and map them back to numerical values. Multiple trajectories are sampled to obtain a predictive distribution."
+    "Figure: High-level depiction of Chronos Model. (Left) The input time series is scaled and quantized to obtain a sequence of tokens. (Center) The tokens are fed into a language model which may either be an encoder-decoder or a decoder-only model. The model is trained using the cross-entropy loss. (Right) During inference, we autoregressively sample tokens from the model and map them back to numerical values. Multiple trajectories are sampled to obtain a predictive distribution."
    ]
   },
   {
