--- a/notebooks/chronos.ipynb
+++ b/notebooks/chronos.ipynb
@@ -415,7 +415,7 @@
    },
    "outputs": [],
    "source": [
-    "mape = np.mean(np.abs((df2[\"y\"] - median) / df2[\"y\"])) * 100\n",
+    "mape = np.mean(np.abs((df2[\"y\"] - median) / df2[\"y\"])) * 100.00\n",
     "print(f\"MAPE: {mape:.2f}%\")"
    ]
   },
@@ -909,7 +909,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Forecasting_Chronos",
+   "notebookName": "chronos",
    "widgets": {}
   },
   "colab": {
@@ -1953,4 +1953,3 @@
  "nbformat": 4,
  "nbformat_minor": 0
 }
-
