--- a/notebooks/chronos.ipynb
+++ b/notebooks/chronos.ipynb
@@ -78,7 +78,7 @@
    },
    "source": [
     "### In summary:\n",
-    " Chronos tokenizes time series into discrete bins through simple scaling and quantization of real values. In this way, we can train off-the-shelf language models on this “language of time series,” with no changes to the model architecture (above Figure). Remarkably, this straightforward approach proves to be effective and efficient, underscoring the potential for language model architectures to address a broad range of time series problems with minimal modifications."
+    " Chronos tokenizes time series into discrete bins through simple scaling and quantization of real values. In that way, we can train off-the-shelf language models on this “language of time series,” with no changes to the model architecture (above Figure). Remarkably, this straightforward approach proves to be effective and efficient, underscoring the potential for language model architectures to address a broad range of time series problems with minimal modifications."
    ]
   },
   {
