--- a/notebooks/SimilarMovies.ipynb
+++ b/notebooks/SimilarMovies.ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "movieRatings = ratings.pivot_table(index=['user_id'],columns=['title'],values='rating')\n",
-    "movieRatings.head()"
+    "movieRatings.head(10)"
    ]
   },
   {
